# PropertyScraper

./: .gitignore  README.md  SKILL.md  fetch_pages.py  main.py  pyproject.toml  scrape_and_dump.py
property_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
